Fix Follow up menu that goes behind the nav bar

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -3,6 +3,9 @@
 //   which depends on V8 which is hard to install on Windows and would slow contribution
 //
 // If that fails we will have to start from a vanilla bootstrap
+.banner {
+  z-index: 1500;
+}
 #cross-nav {
   background-color: transparent;
   a {
